fix(console): use native scrollbar in form layout

--- a/app/components/folio/console/form/layout_component.sass
+++ b/app/components/folio/console/form/layout_component.sass
@@ -17,20 +17,6 @@
     max-width: 100%
     overflow-x: auto
     overflow-y: hidden
-    -webkit-overflow-scrolling: touch
-    scrollbar-color: $f-c-overlays-black transparent
-    scrollbar-width: thin
-
-    &::-webkit-scrollbar
-      height: px-to-rem(4px)
-      width: px-to-rem(4px)
-
-    &::-webkit-scrollbar-track
-      background: transparent
-
-    &::-webkit-scrollbar-thumb
-      background: $f-c-overlays-black
-      border-radius: $border-radius
 
   &__file-pickers
     align-items: flex-start
